--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,12 +1,5 @@
 {
-    "version":2,
-    "builds": [
-      { "src": "*.jsx", "use": "@vercel/node" }
-    ],
-    "routes": [
-        {
-          "src": "/(.*)",
-          "dest": "/"
-        }
-    ]
-  }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
+}
